# colour-checker-detection

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  BIBLIOGRAPHY.bib  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  README.rst  TODO.rst  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation-improvement.yml  feature-request.yml  question.yml
.github/workflows/: continuous-integration-documentation.yml  continuous-integration-package.yml  continuous-integration-quality-unit-tests.yml  continuous-integration-static-type-checking.yml  continuous-integration.yml
colour_checker_detection/: __init__.py
colour_checker_detection/detection/: __init__.py  common.py  inference.py  segmentation.py
colour_checker_detection/detection/templates/: __init__.py  generate_template.py  template_colour.pkl  template_colour.py  template_gray.pkl  template_gray.py
colour_checker_detection/detection/tests/: test_common.py  test_inference.py  test_segmentation.py
colour_checker_detection/examples/: examples_detection.ipynb
colour_checker_detection/scripts/: inference.py
docs/: Makefile  colour_checker_detection.detection.rst  colour_checker_detection.rst  conf.py  index.rst  installation.rst  make.bat  manual.rst  reference.rst  requirements.txt  user-guide.rst
utilities/: export_todo.py  unicode_to_ascii.py
